--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -81,6 +81,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          target: production
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -120,6 +121,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          target: production
           push: false
           load: true
           tags: local-scan:latest
